--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="fr">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page de connexion</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+  <body>
+    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <header>
+        <h2 class="logo">SethGAMES</h2>
+        <nav class="navigation">
+        <a href="#">Accueil</a>
+        <a href="#">Services</a>
+        <a href="#">A propos</a>
+        <a href="#">Nous contacter</a>
+        <button class="btnLogin-popup">Connexion</button>
+    </header>
+    
+<script src="script.js"></script>
+</body>
+</html>
