--- a/profilpage.html
+++ b/profilpage.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create user profil</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<header class= 'profilpage'>
+    <h2 class="logo">SethGAMES</h2>
+    <nav class="navigation">
+    <a href="#">Accueil</a>
+    <a href="#">Services</a>
+    <a href="#">A propos</a>
+    <a href="#">Nous contacter</a>
+</header>
+  
+<body>
+    
+</body>
+</html>
