--- a/profilpage.html
+++ b/profilpage.html
@@ -11,7 +11,12 @@
 
 <div class="container" id="container">
     <input type="pseudo" placeholder="Pseudo ou prénom">
-    <input type="bio" placeholder="Description">  
+    <input type="bio" placeholder="Description">
+    <select name="ages" id="ages">
+        <option value="13-18">13-18 ans</option>
+        <option value="18-30 ans">18-30 ans</option>
+        <option value="+30">+30 ans</option>
+    </select>  
     <div class="purple-container">
         <h1>Bienvenue!</h1>
         <p>créez-vous un profil unique qui vous definira.</p>
